traffic/virtualservice-k8s-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ratings
  labels:
    app: ratings
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: ratings
