traffic/virtualservice-k8s-service/virtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - bookinfo
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: ratings.default.svc.cluster.local
        port:
          number: 8080
    timeout: 1s   #precise traffic management
